Fixed spacing of tabs

--- a/app/styles/etherwallet-new.less
+++ b/app/styles/etherwallet-new.less
@@ -1171,6 +1171,9 @@ tr th{
   letter-spacing: normal;
   color: #2b99ff !important;
 }
+.mb-1px{
+  margin-bottom: 2px !important;
+}
 .button-timelock:hover{
   border-radius: 3px;
   background-color: #e9eff7 !important;
